lager-lang/examples/bad/no_main.lg
int f(int x) {
    return x * 2;
}

int g(int y) {
    return y + 1;
}
